src/scss/_projectCard.scss
@use "var" as *;

.small-project-card {
  height: fit-content;
  padding-top: 4rem;
  padding-bottom: 4rem;
  padding-left: 0;

  h2 {
    margin-top: 5rem;
    margin-bottom: 0;
    border-bottom: solid 2px $primaryDark;
  }

  h3 {
    margin: 0;
  }

  p {
    margin: 0;
    margin-bottom: 1rem;
  }

  a {
    text-decoration: none;
    padding: 5px 8px 5px 8px;
    border: solid 1px $primaryDark;
    border-radius: 15px;
  }

  .project-link {
    margin-top: 1rem;
    position: relative;
    isolation: isolate;
    overflow: hidden;


    &> :first-child {
      left: 0;
      top: 0;

    }

    &> :last-child {
      right: 0;
      top: 0;

    }

    &::before {
      content: '';
      position: absolute;
      z-index: -1;
      background-color: $primaryDark;
      opacity: 0;
      width: 10%;
      aspect-ratio: 1;
      border-radius: 50%;
      inset: 0;
      margin: auto;
      transition: transform 1s;
    }

    &:hover::before {
      transform: scale(25);
      opacity: 1;

    }

    &:has(:first-child:hover)::before {
      margin-left: 0;
    }

    &:has(:last-child:hover)::before {
      margin-right: 0;
    }

    &:hover {

      .link-text,
      svg {
        color: $primaryLight;
        fill: $primaryLight;
      }
    }
  }
}

.button-animation {
  position: absolute;

  background-color: transparent;
  width: 33.333%;
  height: 100%;
}

@media screen and (min-width:768px) {
  .small-project-card {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    border-bottom: solid 1px $primaryDark;

    .project {
      margin-top: 0;
    }

    p {
      margin: 0;
    }
  }

}

